Removed padding + organized into components

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="This web application uses the FlightAware API to display flight data after manipulating data with graph theory algorithms."
-      content="Web site created using create-react-app"
+      name="This web application uses CoinAPI to create various networks and analyze data through network science/graph theory."
+      content="Web site created by @Karston02 on GitHub"
     />
-    <title>Flight Graphs</title>
+    <title>Crypto Network Science</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
