--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created by @Karston02 on GitHub"
     />
     <title>Crypto Network Science</title>
-    <link rel="icon" type="image/png" href="/src/images/logo.png">
+    <link rel="icon" type="image/png" href="logo.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
